--- a/angular.json
+++ b/angular.json
@@ -42,9 +42,14 @@
               }
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/swiper/swiper-bundle.min.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+             "node_modules/aos/dist/aos.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
