--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
+    "@angular/forms": "^18.2.13",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
-    "@angular/router": "^18.2.0",
+    "@angular/router": "^18.2.13",
     "@angular/ssr": "^18.2.19",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "aos": "^2.3.4",
     "express": "^4.18.2",
     "intersection-observer": "^0.12.2",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "^18.2.19",
     "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/aos": "^3.0.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
