--- a/angular.json
+++ b/angular.json
@@ -51,11 +51,7 @@
             "scripts": [
              "node_modules/aos/dist/aos.js"
             ],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "server": "src/main.server.ts"
           },
           "configurations": {
             "production": {
