--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
+            "allowedCommonJsDependencies": ["aos"],
             "outputPath": "dist/sunflowertrip",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -61,13 +67,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "1MB",
                   "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "6kB",
+                  "maximumError": "6kB"
                 }
               ],
               "outputHashing": "all"
@@ -98,6 +104,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            
             "polyfills": [
               "zone.js",
               "zone.js/testing"
