--- a/angular.json
+++ b/angular.json
@@ -51,6 +51,7 @@
               "node_modules/aos/dist/aos.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/swiper/swiper-bundle.min.css",
+              "node_modules/swiper/swiper.min.css",
               "src/styles.scss"
             ],
             "scripts": [
