--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.2.19",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "express": "^4.18.2",
     "intersection-observer": "^0.12.2",
     "rxjs": "~7.8.0",
