--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,7 @@
              "node_modules/aos/dist/aos.js"
             ],
             "server": "src/main.server.ts",
-            "prerender": false,
+            "prerender": true,
             "ssr": {
               "entry": "src/main.server.ts"
             }
