--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "gsap": "^3.13.0",
     "intersection-observer": "^0.12.2",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
